--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Shicheng QIU"
-  avatar           : 
+  avatar           : "graduation.jpg"
   bio              : "MPhil Student of Electronic Computer & Engineering at HKUST"
   location         : "Hong Kong"
   employer         :
