--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Shicheng QIU"
   avatar           : "graduation.jpg"
-  bio              : "MPhil Student of Electronic Computer & Engineering at HKUST"
+  bio              : "M.Phil Student of Electronic Computer & Engineering at HKUST"
   location         : "Hong Kong"
   employer         :
   pubmed           : 
