--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,7 +11,10 @@ main:
     
   - title: "Gallery"
     url: /Gallery/
-        
+
+  - title: "Projects"
+    url: /Projects/   
+    
 #  - title: "Blog Posts"
 #    url: /year-archive/
     
