--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,13 +10,10 @@ main:
 #    url: /teaching/    
     
   - title: "Gallery"
-    url: /gallery/
-
-  - title: "Projects"
-    url: /Projects/   
+    url: /gallery/ 
     
-#  - title: "Blog Posts"
-#    url: /year-archive/
+  - title: "Projects"
+    url: /year-archive/
     
 #  - title: "CV"
 #    url: /cv/
