--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,8 +12,8 @@ main:
   - title: "Gallery"
     url: /gallery/ 
     
-  - title: "Projects"
-    url: /year-archive/
+#  - title: "Projects"
+#    url: /year-archive/
     
 #  - title: "CV"
 #    url: /cv/
